--- a/Demo/.classpath
+++ b/Demo/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/dunamis_ob.jar"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry exported="true" kind="lib" path="libs/FlashRuntimeExtensions.jar"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
