--- a/DEMO1/bin/AndroidManifest.xml
+++ b/DEMO1/bin/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <uses-permission android:name='android.permission.INTERNET' />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" ></uses-permission> 
     
-    <application android:label='@string/app_name' android:icon='@drawable/icon' android:debuggable="true" >
+    <application android:label='@string/app_name' android:icon='@drawable/icon' android:debuggable="true" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
         <activity android:name='MAIN'
                   android:label='@string/app_name'  android:configChanges="orientation|keyboardHidden" android:screenOrientation="portrait" >
             <intent-filter>
